# python-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py
task_manager/task_manager/: settings.py
tasks/: urls.py  views.py
tasks/templates/tasks/: base.html  index.html
users/: urls.py  views.py
users/templates/registration/: create.html  logged_out.html  login.html  register.html  users.html
users/templates/users/: delete.html  update.html  users_list.html
