[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["agmrv <airatgum@gmail.com>"]
packages = [
  { include = "task_manager" },
]
repository = "https://github.com/agmrv/python-project-lvl4"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
dj-database-url = "^0.5.0"
python-dotenv = "^0.17.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
